[package]
name        = "Pratt"
description = "A generic Pratt parsing library."
authors     = ["Robert Jacobson <rljacobson@gmail>"]
version     = "0.1.0"
edition     = "2021"
keywords    = ["interpreters", "pratt", "precedence"]
categories  = ["algorithms", "compilers", "parsing"]
repository  = "https://github.com/rljacobson/Pratt"

publish = false

[dependencies]
string_cache = "0.8.7"  # String interning
regex        = {version = "1.6.0", default-features = false, features = ["perf", "std"]} # Lexer
aho-corasick = "1.0.5"  # Lexer
csv          = "1.2.2"  # Read operators from file
lazy_static  = "1.4.0"
tiny_logger  = {path = "../tiny_logger"}
